--- a/bin/build
+++ b/bin/build
@@ -1,2 +1,12 @@
-docker build -t academicmerit/awscli:$1 .
-docker push academicmerit/awscli:$1
+#!/bin/bash
+
+# build for ec2
+docker build --build-arg UID=500 -t academicmerit/awscli:ec2 .
+
+# build for macos
+docker build -t academicmerit/awscli:macos -t academicmerit/awscli:latest .
+
+# push to repo
+for TAG in latest macos ec2; do
+   docker push academicmerit/awscli:$TAG
+done
